@@ -32,20 +32,23 @@ using namespace Gyoto;
 /// Properties
 
 #include "GyotoProperty.h"
-GYOTO_PROPERTY_START(Spectrum::PowerLaw)
-GYOTO_PROPERTY_DOUBLE(Spectrum::PowerLaw, Exponent, exponent)
-GYOTO_PROPERTY_DOUBLE(Spectrum::PowerLaw, Constant, constant)
-GYOTO_PROPERTY_VECTOR_DOUBLE(Spectrum::PowerLaw, CutOffIneV, cutoffinev)
+GYOTO_PROPERTY_START(Spectrum::PowerLaw,
+		     "'Constant * nu[Hz]^Exponent' between CutOff[0] and CutOff[1]")
+GYOTO_PROPERTY_DOUBLE(Spectrum::PowerLaw, Exponent, exponent, "Exponent of power law")
+GYOTO_PROPERTY_DOUBLE(Spectrum::PowerLaw, Constant, constant, "Constant in front of power law")
+GYOTO_PROPERTY_VECTOR_DOUBLE_UNIT(Spectrum::PowerLaw, CutOff, cutoff,
+				  "Cut-off frequencies in any unit convertible to Hz, m or eV "
+				  "(default: '0 DBL_MAX'; default unit: Hz).")
 GYOTO_PROPERTY_END(Spectrum::PowerLaw, Generic::properties)
 
 ///
 
 Spectrum::PowerLaw::PowerLaw() :
 Spectrum::Generic("PowerLaw"), constant_(1.), exponent_(0.),
-  minfreq_(DBL_MIN), maxfreq_(DBL_MAX){}
+  minfreq_(0.), maxfreq_(DBL_MAX){}
 Spectrum::PowerLaw::PowerLaw(double p, double c) :
   Spectrum::Generic("PowerLaw"), constant_(c), exponent_(p),
-  minfreq_(DBL_MIN), maxfreq_(DBL_MAX){}
+  minfreq_(0.), maxfreq_(DBL_MAX){}
 Spectrum::PowerLaw * Spectrum::PowerLaw::clone() const
 { return new Spectrum::PowerLaw(*this); }
 
@@ -53,17 +56,26 @@ double Spectrum::PowerLaw::constant() const { return constant_; }
 void Spectrum::PowerLaw::constant(double c) { constant_ = c; }
 double Spectrum::PowerLaw::exponent() const { return exponent_; }
 void Spectrum::PowerLaw::exponent(double c) { exponent_ = c; }
-void Spectrum::PowerLaw::cutoffinev(std::vector<double> const &v) {
-  if (v.size() != 2)
-    throwError("In PowerLawSpectrum: Only 2 arguments to define"
-	       " cutoffs");
-  minfreq_ = v[0]*GYOTO_eV2Hz;
-  maxfreq_ = v[1]*GYOTO_eV2Hz;
+void Spectrum::PowerLaw::cutoff(std::vector<double> const &v, std::string const &u) {
+  cutoff({Units::ToHerz(v[0], u), Units::ToHerz(v[1], u)});
 }
-std::vector<double> Spectrum::PowerLaw::cutoffinev() const {
-  std::vector<double> v (2, 0.);
-  v[0]=minfreq_; v[1]=maxfreq_;
-  return v;
+void Spectrum::PowerLaw::cutoff(std::vector<double> const &v) {
+  if (v.size() != 2)
+    throwError("CutOff needs exactly two cut-off frequencies");
+  minfreq_ = v[0];
+  maxfreq_ = v[1];
+  if (minfreq_ > maxfreq_) {
+    double tmp = minfreq_;
+    minfreq_ = maxfreq_;
+    maxfreq_ = tmp;
+  }
+}
+
+std::vector<double> Spectrum::PowerLaw::cutoff(std::string const &u) const {
+  return {Units::FromHerz(minfreq_, u), Units::FromHerz(maxfreq_, u)};
+}
+std::vector<double> Spectrum::PowerLaw::cutoff() const {
+  return {minfreq_, maxfreq_};
 }
 
 double Spectrum::PowerLaw::operator()(double nu) const {
